# converter-buddy-webapp

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  converter_buddy_webui-2f4dd272919577ca.js  converter_buddy_webui-4e63c310539e6ba0.js  converter_buddy_webui-6b2d2ac3de45af3e.js  converter_buddy_webui-72782d3d562e81c0.js  converter_buddy_webui-8112dbfc1165b7cb.js  converter_buddy_webui-a2e4668d5acda58b.js  converter_buddy_webui-a62c61e2eccef681.js  converter_buddy_webui-be55a58f76b54086.js  converter_buddy_webui-c0b9ab865185e717.js  index.html  style.css
.github/workflows/: cd.yml  rust.yml
assets/dioxus/: converter-buddy-webapp.js  converter-buddy-webapp_bg.wasm  name.js
assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
public/: style.css
src/: lib.rs  main.rs  run.rs  theme.rs
src/components/: description_popup.rs  export_form.rs  file_list.rs  format_form.rs  import_form.rs  input_form.rs  mod.rs
src/services/conversions/: dummy.rs  injector.rs  local.rs  mod.rs  traits.rs
