[package]
name = "converter_buddy_webui"
version = "0.1.0"
edition = "2021"
authors = ["Attilio Oliva <attilio.oliva@protonmail.com>"]

repository = "https://github.com/attilio-oliva/converter-buddy-webapp"
homepage = "https://github.com/attilio-oliva/converter-buddy-webapp"

[dependencies]
yew = "0.19.3"
yewdux = "0.9.2"
stylist = { version = "0.10.0", features = ["yew"]}
yew-feather = "0.2.1"
once_cell = "1.10.0"
web-sys = { version = "0.3.57", features = [
        "Window",
        "Url",
        "Blob",
        "BlobEvent",
        "DataTransfer",
        "DataTransferItemList"
        ]}
gloo-console = "0.2.1"
gloo-file = "0.2.1"
gloo-utils = "0.1.3"
js-sys = "0.3.57"
base64 = "0.13.0"
strum = "0.24.0"
strum_macros = "0.24"
itertools = "0.10.3"
converter_buddy = "0.2.0"
runtime_injector = { version = "0.4.0", features =["arc"]}

[lib]
name = "converter_buddy_webui"
path = "./src/lib.rs"
