[package]
name = "converter_buddy_webapp"
version = "0.1.0"
edition = "2021"
authors = ["Attilio Oliva <attilio.oliva@protonmail.com>"]

repository = "https://github.com/attilio-oliva/converter-buddy-webapp"
homepage = "https://github.com/attilio-oliva/converter-buddy-webapp"

[dependencies]
converter_buddy = "0.2.1"
dioxus = "0.3.2"
dioxus-free-icons = { version = "0.6.0", features = ["octicons"] }
dioxus-web = "0.3.1"
strum = "0.24.1"
